- got external works hooked up properly - got things running after pagination events

--- a/template.html
+++ b/template.html
@@ -272,10 +272,10 @@
                                                     <i></i>
                                                     <span>Loading</span>
                                                 </div>
-                                                <div class="item-external-url">
+                                                <a href="#" class="item-external-url">
                                                     <i></i>
                                                     <span>Loading</span>
-                                                </div>
+                                                </a>
                                             </aside>
                                             <figcaption class="caption">
                                                 {Caption}
@@ -297,10 +297,10 @@
                                                     <i></i>
                                                     <span>Loading</span>
                                                 </div>
-                                                <div class="item-external-url">
+                                                <a href="#" class="item-external-url">
                                                     <i></i>
                                                     <span>Loading</span>
-                                                </div>
+                                                </a>
                                             </aside>
                                             <figcaption class="caption">
                                                 {Caption}
